--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body { font-family: 'Shadows Into Light'; font-size: 13px; letter-spacing: 2px; }
-.rb { font-family: 'Roboto', sans-serif; letter-spacing: 0; }
+
 input { margin-bottom: 10px!important;}
 input[type="checkbox"] { margin-bottom: 20px!important; position: static!important;}
 p { margin: 0; }
@@ -17,31 +17,45 @@ p { margin: 0; }
 .has-error input { border-bottom: 1px solid #c0392b; }
 .has-error label, .has-error .err-message { color: #c0392b; }
 .err-message { text-align: left; margin-top: 0!important; font-size: 14px; }
-header { font-weight: bold; font-size: 20px; text-align: center; background-color: #16a085; padding: 1rem 0; color: #fff; border-bottom: 1px dotted #fff;}
+
+header { text-align: center; font-weight: bold; font-size: 20px; background-color: #16a085; padding: 1rem 0; color: #fff; border-bottom: 1px dotted #fff;}
+header i { margin: 6px 10px 0 -10px; }
+.searchbar { background-color: #0c594a!important; color: #fff; width: 83%!important; border-radius: 5px!important; margin-bottom: 0!important;}
+.searchbutton { position: absolute; top: 14px; right: 10px; font-size: 32px;}
+.searchbar { text-indent: 14px; }
+
 ul.navigation { background-color: #26a69a; margin: 0; }
 ul.navigation li { width: 33.3%; text-align: center; font-weight: bold; float: left; border-right: 1px solid #fff; }
 
-ul.navigation li p.active { background-color: #1abc9c;}
+ul.navigation li p.active { background-color: #1abc9c; border-bottom: 2px solid #2980b9;}
 ul.navigation li:last-child { border-right: none; }
 ul.navigation li a { color: #fff; padding: 10px 0; display: block; text-transform: capitalize; }
 
 ul.toolitems li a img { width: 100%; height: auto; }
-ul.toolitems li {float: left; margin: 0 10px 10px 0; width: 31.5%;}
-ul.toolitems li:nth-child(3n) { margin-right: 0; }
+ul.toolitems li {float: left; margin: 0 10px 10px 0; width: 100px;}
 
 .healthimg { margin-right: 3%; height: 50px;}
 .healthimg img { width: 50px; height: auto; }
-.healthlist { padding: 2%; border: 1px solid #ccc; position: relative;}
+.healthlist { padding: 10px; border: 1px solid #ccc; position: relative;}
 .healthinfo { width: 78%; }
 .healthinfo .healthtitle { font-weight: bold; font-size: 16px;}
 .healthtime { color: #666; font-size: 10px;}
 .healthtime i{ margin-right: 5px; display: inline-block; vertical-align: middle; }
 .healthtime span {display: inline-block; vertical-align: middle;padding-top: 1px;}
 .healthinfo .healthtitle { width: 70%!important; }
-.healthinfo .healthdesc, .healthinfo .healthtitle { text-overflow: ellipsis; width: 100%; overflow: hidden; white-space: nowrap;}
-.minilinks { position: absolute; top: 4%; right: 4%;}
-.fileupload { width: 23px; height: auto; margin-right: 5px; }
-.share { width: 23px; height: auto; }
-@media screen and (max-width: 410px) {
-	/*.healthinfo { width: 80%; }*/
+.healthinfo .healthdesc, .healthinfo .healthtitle { text-overflow: ellipsis; width: 100%; overflow: hidden; white-space: nowrap; }
+.minilinks { position: absolute; top: 10px; right: 10px; }
+.fileupload { width: 20px; height: auto; margin-right: 5px; }
+.share { width: 20px; height: auto; }
+
+ul.sociallinks li{ float: left; width: 40px; margin-right: 10px }
+ul.sociallinks li img { width: 100%; height: auto; }
+ul.sociallinks li:nth-child(3n) { margin-right: 0; }
+.modalsocial { padding: 10px 24px 0!important;}
+
+
+@media screen and (max-width: 460px) {
+	ul.toolitems li { width: 31%;}
+	ul.toolitems li:nth-child(3n) { margin-right:0;}
+
 }
