--- a/pages/includes/nav.html
+++ b/pages/includes/nav.html
@@ -4,7 +4,7 @@
 			<span class="backbutton" ng-click="backbutton()"><img src="images/backbutton.png"></span>
 			<span class="apptitle">Lifenotes</span>
 			<span class="searchbar"><input type="text" placeholder="Search"></span>
-			<span ng-click="togglesearch()"><i class="material-icons searchbutton">{{ toggleaction }}</i></span>
+			<span class="searchbutton" ng-click="togglesearch()"><i class="material-icons">{{ toggleaction }}</i></span>
 		</header>
 		<ul class="navigation clearfix">
 			<li ng-repeat="items in navigation">
