--- a/pages/includes/nav.html
+++ b/pages/includes/nav.html
@@ -2,7 +2,7 @@
 	<div class="headerblock">
 		<header class="clearfix" ng-class="{ 'active' : toggleactive === true }">
 			<span class="backbutton" ng-click="backbutton()"><img src="images/backbutton.png"></span>
-			<span class="apptitle">Lifenotes</span>
+			<span class="apptitle">{{ title }}</span>
 			<span class="searchbar"><input type="text" placeholder="Search"></span>
 			<span class="searchbutton" ng-click="togglesearch()"><i class="material-icons">{{ toggleaction }}</i></span>
 		</header>
